main.html: add some branding to navbar
Signed-off-by: JUAN MÉNDEZ <vpsink@gmail.com>

--- a/gestion/templates/main.html
+++ b/gestion/templates/main.html
@@ -15,7 +15,10 @@
 
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Gestión Empresarial</a>
+        <a class="navbar-brand" href="#">
+            <img src="{% static 'main/ipn.png'%}" width="25" height="30" class="d-inline-block align-top" alt="">
+            Gestión Empresarial
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -23,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'main' %}">Inicio <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Recursos</a>
@@ -40,6 +43,9 @@
                 </li>
             </ul>
         </div>
+        <span class="navbar-text">
+            <img src="{% static 'main/escom.png'%}" width="50" height="30" class="d-inline-block align-top" alt="">
+        </span>
     </nav>
     {% block content %}
     {% endblock %}
