--- a/gestion/templates/unit.html
+++ b/gestion/templates/unit.html
@@ -1,17 +1,17 @@
 {% extends 'main.html' %}
 {% block content %}
-	<div class="col mx-0 border-left px-0">
+	<div class="col mx-0 border-left p-3">
     	<div>
             <div class="bg-primary text-white p-1 text-center">
 				<br><h2> Unidad {{ this_unit.order }}</h2>
             </div>
-            <div class="bg-light p-5">
+            <div class="bg-light p-4">
                 <h2 id="objetivo">Objetivo</h2>
                 <p>
                 	{{ this_unit.goal }}
                 </p>
             </div>
-            <div class="p-5">
+            <div class="p-4">
                 <h2 id="contenido">Contenido</h2>
             </div>
             <!-- Contenido -->
@@ -29,7 +29,7 @@
 
                     <div id="collapse_{{item.order}}" class="collapse multi-collapse" aria-labelledby="heading_{{item.order}}">
                         <div class="card-body">
-                            <p>{{item.contents | safe}} </p>
+                            <p>{{item.contents | safe}}</p>
                         </div>
                     </div>
                     {% endfor %}
