--- a/gestion/templates/unit.html
+++ b/gestion/templates/unit.html
@@ -12,7 +12,7 @@
                 </p>
             </div>
             <div class="p-4">
-                <h2 id="contenido">Contenido</h2>
+                <h2>Contenidos</h2>
             </div>
             <!-- Contenido -->
             <div id="accordion">
