add ColorField/some minor template changes
Signed-off-by: JUAN MÉNDEZ <vpsink@gmail.com>

--- a/gestion/templates/main.html
+++ b/gestion/templates/main.html
@@ -61,4 +61,9 @@
         backdrop-filter: blur(20px);
         filter: drop-shadow(1px 2px 3px white);
     }
+
+    
 </style>
+
+{% block extra_css %}
+{% endblock extra_css %}
