--- a/gestion/templates/unit.html
+++ b/gestion/templates/unit.html
@@ -1,11 +1,11 @@
 {% extends 'main.html' %}
 {% block content %}
-	<div style="padding-top: 14px;">
+	<div style="padding-top: 13px;">
         <div class="text-white text-center mx-auto p-2 bg-gradient border border-dark" style="background-color: {{ this_unit.header_color }};">
 			<h2 style="margin-bottom: 0"> Unidad {{ this_unit.order }}</h2>
         </div>
 
-        <div class="col p-3">
+        <div class="col col-md-10 p-3 mx-auto">
             <div class="bg-light p-4 rounded border_acccent soft_accent">
                 <h2 id="objetivo">Objetivo</h2>
                 <p>
@@ -43,8 +43,12 @@
 {% endblock %}
 {% block extra_css%}
 <style type="text/css">
-    .border_accent {
+    .border_accent, {
         border: 1px solid {{ this_unit.header_color  }} !important;
+    }
+
+    .btn-link {
+        color: {{ this_unit.header_color  }};
     }
 
     /* Soft accent color 18%*/
