--- a/gestion/templates/unit.html
+++ b/gestion/templates/unit.html
@@ -1,12 +1,13 @@
 {% extends 'main.html' %}
 {% block content %}
-	<div style="padding-top: 13px;">
+	<div style="padding-top: 7px;">
         <div class="text-white text-center mx-auto p-2 bg-gradient border border-dark" style="background-color: {{ this_unit.header_color }};">
 			<h2 style="margin-bottom: 0"> Unidad {{ this_unit.order }}</h2>
         </div>
 
         <div class="col col-md-10 p-3 mx-auto">
-            <div class="bg-light p-4 rounded border_acccent soft_accent">
+
+            <div class="bg-light p-4 rounded border border_acccent soft_accent">
                 <h2 id="objetivo">Objetivo</h2>
                 <p>
                 	{{ this_unit.goal }}
@@ -16,27 +17,27 @@
                 <h6>Esta unidad consta de {{ subunits | length}} subunidad(es). Haga click en una sección para revelar sus contenidos.</h6>
             </div>
             <!-- Contenido -->
-            <div id="accordion">
-                <div class="card">
-                    {% for item in subunits %}
-                    <div class="card-header softer_accent" id="heading_{{item.order}}">
-                        <h5 class="mb-0">
-                            <button class="btn btn-link" data-toggle="collapse" data-target="#collapse_{{item.order}}"
-                                aria-expanded="true" aria-controls="collapse_{{item.order}}">
-                                {{item.order_as_str}} {{item.name}}
-                            </button>
-                        </h5>
-                    </div>
+            <div>
+                {% for item in subunits %}
+                    <div class="card mb-3">
+                        <div class="card-header softer_accent" id="heading_{{item.order}}">
+                            <h5 class="mb-0">
+                                <button class="btn btn-link" data-toggle="collapse" data-target="#collapse_{{item.order}}"
+                                    aria-expanded="true" aria-controls="collapse_{{item.order}}">
+                                    {{item.order_as_str}} {{item.name}}
+                                </button>
+                            </h5>
+                        </div>
 
-                    <div id="collapse_{{item.order}}" class="collapse multi-collapse" aria-labelledby="heading_{{item.order}}">
-                        <div class="card-body p-4">
-                            <div class="d-flex flex-column justify-content-start">
-                                {{item.contents | safe}}
+                        <div id="collapse_{{item.order}}" class="collapse multi-collapse" aria-labelledby="heading_{{item.order}}">
+                            <div class="card-body p-4">
+                                <div class="d-flex flex-column justify-content-start">
+                                    {{item.contents | safe}}
+                                </div>
                             </div>
                         </div>
                     </div>
-                    {% endfor %}
-                </div>
+                {% endfor %}
             </div>
         </div>
     </div>
@@ -51,9 +52,16 @@
         color: {{ this_unit.header_color  }};
     }
 
-    /* Soft accent color 18%*/
+    /* Radial effects so that it doesn't look like garbage */
     .soft_accent{
-        background: {{ this_unit.header_color  }}2f !important;
+        background: repeating-radial-gradient(
+            circle at -2%,
+            {{ this_unit.header_color  }}2f,
+            {{ this_unit.header_color  }}2f 10px,
+            {{ this_unit.header_color  }}10 10px,
+            {{ this_unit.header_color  }}10 20px
+        );
+        /*background: {{ this_unit.header_color  }}2f !important;*/
     }
 
     /* Even softer, around 6% opacity */
