--- a/gestion/templates/main.html
+++ b/gestion/templates/main.html
@@ -11,7 +11,7 @@
         crossorigin="anonymous"></script>
         <title>Gestión Empresarial</title>
     </head>
-    <body class="pt-5">
+    <body class="mainbody">
 
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-md navbar-light">
@@ -50,6 +50,55 @@
         </a>
     </nav>
     {% block content %}
+
+    <div class="container-fluid min-vh-100 text-white">
+        <div class="d-flex row justify-content-center align-items-center min-vh-100">
+            <div class="d-flex flex-column w-100">
+                <div class="align-self-center pt-2">
+                    <strong><u><h1>GESTIÓN EMPRESARIAL</h1></u></strong>
+                </div>
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-50 mx-auto" src="{% static 'main/gestion-estrategica.png'%}" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Unidad 2 - Gestión estratégica de la empresa</h2>
+                                <h4>La únidad 2 ya está disponible</h4>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-50 mx-auto" src="{% static 'main/proximamente.png'%}" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Unidad 3</h2>
+                                <h4>Próximamente</h4>
+                            </div>
+                        </div>
+                        <div class="carousel-item w-100">
+                            <img class="d-block w-50 mx-auto" src="{% static 'main/proximamente.png'%}" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Unidad 3</h2>
+                                <h4>Próximamente</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     {% endblock %}
     </body>
 </html>
@@ -57,12 +106,20 @@
 <!-- TODO -->
 <style type="text/css">
     .navbar-light {
-        background: rgba(255, 255, 255, 0.3);
+        background: rgba(255, 255, 255, 0.6);
         backdrop-filter: blur(20px);
         filter: drop-shadow(1px 2px 3px white);
     }
     
 </style>
 
+
 {% block extra_css %}
+<style>
+    .mainbody {
+        height: 100%;
+        background: url("{% static 'main/background1.png'%}");
+        background-size: auto;
+    }
+</style>
 {% endblock extra_css %}
