--- a/gestion/templates/unit.html
+++ b/gestion/templates/unit.html
@@ -1,4 +1,4 @@
-{% extends 'main.html' %}
+{% extends 'base.html' %}
 {% block content %}
 	<div style="padding-top: 7px;">
         <div class="text-white text-center mx-auto p-2 bg-gradient border border-dark" style="background-color: {{ this_unit.header_color }};">
@@ -9,7 +9,7 @@
 
             <div class="bg-light p-4 rounded border border_acccent soft_accent">
                 <h2 id="objetivo">Objetivo</h2>
-                <p>
+                <p class="font-weight-bold">
                 	{{ this_unit.goal }}
                 </p>
             </div>
@@ -21,12 +21,13 @@
                 {% for item in subunits %}
                     <div class="card mb-3">
                         <div class="card-header softer_accent" id="heading_{{item.order}}">
-                            <h5 class="mb-0">
-                                <button class="btn btn-link" data-toggle="collapse" data-target="#collapse_{{item.order}}"
+                                <button class="btn btn-link font-weight-bold" data-toggle="collapse" data-target="#collapse_{{item.order}}"
                                     aria-expanded="true" aria-controls="collapse_{{item.order}}">
                                     {{item.order_as_str}} {{item.name}}
                                 </button>
-                            </h5>
+                                {% if item.keywords %}
+                                    <h6 class="card-subtitle ml-3 text-muted">Palabras clave: {{ item.keywords }}</h6>
+                                {% endif %}
                         </div>
 
                         <div id="collapse_{{item.order}}" class="collapse multi-collapse" aria-labelledby="heading_{{item.order}}">
