add tinymce's HTML editor & other minor cosmetic changes
Signed-off-by: JUAN MÉNDEZ <vpsink@gmail.com>

--- a/gestion/templates/main.html
+++ b/gestion/templates/main.html
@@ -53,8 +53,7 @@
 <style>
     body {
 		height: 100%;
-		background-color: grey;
-        /*background: url("{% static 'main/background1.png'%}") !important;*/
+        background: url("{% static 'main/background1.png'%}") !important;
         background-size: auto;
     }
 </style>
