--- a/gestion/templates/base.html
+++ b/gestion/templates/base.html
@@ -24,13 +24,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 {% with request.resolver_match.url_name as url_name %}
-                    <li class="nav-item text-uppercase {% if url_name == 'main' %}active{% endif %}">
+                    <li class="nav-item text-uppercase {% if url_name == 'main' %}active font-weight-bold{% endif %}">
                         <a class="nav-link" href="{% url 'main' %}">Inicio</a>
                     </li>
                     <li class="nav-item text-uppercase">
                         <a class="nav-link" href="#">Recursos</a>
                     </li>
-                    <li class="nav-item text-uppercase dropdown {% if url_name == 'unit' %}active{% endif %}">
+                    <li class="nav-item text-uppercase dropdown {% if url_name == 'unit' %}active font-weight-bold{% endif %}">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Unidades
                         </a>
@@ -51,15 +51,12 @@
     {% endblock %}
     </body>
 </html>
-
-<!-- TODO -->
 <style type="text/css">
     .navbar-light {
         background: rgba(255, 255, 255, 0.3);
         backdrop-filter: blur(20px);
         filter: drop-shadow(1px 2px 3px white);
     }
-    
 </style>
 <script>
     $(document).ready(() => {
