--- a/gestion/templates/main.html
+++ b/gestion/templates/main.html
@@ -1,60 +1,185 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-    <div class="container-fluid min-vh-100 text-white">
-        <div class="d-flex row justify-content-center align-items-center min-vh-100">
-            <div class="d-flex flex-column w-100">
-                <div class="align-self-center pt-2">
-                    <strong><u><h1>GESTIÓN EMPRESARIAL</h1></u></strong>
-                </div>
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block w-50 mx-auto" src="{% static 'main/gestion-estrategica.png'%}" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2>Unidad 2 - Gestión estratégica de la empresa</h2>
-                                <h4>La únidad 2 ya está disponible</h4>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-50 mx-auto" src="{% static 'main/proximamente.png'%}" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2>Unidad 3</h2>
-                                <h4>Próximamente</h4>
-                            </div>
-                        </div>
-                        <div class="carousel-item w-100">
-                            <img class="d-block w-50 mx-auto" src="{% static 'main/proximamente.png'%}" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2>Unidad 3</h2>
-                                <h4>Próximamente</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
+<div class="container-fluid">
+    <div class="d-flex row p-5 text-white bg-info" id="bienvenida" style="align-items: center;">
+        <div class="p-3 col-sm">
+            <h1 class="pb-4">Bienvenidos</h1>
+            <p class="pt-1">
+                Estimados estudiantes, se les extiende la más cordial bienvenida a este espacio,
+                donde podrán encontrar información relevante a la unidad de aprendizaje conocida como Gestión
+                Empresarial,
+                y así fortalecer sus conocimientos para lograr acreditarla.<br /><br />
+
+                Podrán consultar los contenidos de cada unidad en sus respectivas secciones en la barra de navegación
+                que se encuentra en la parte superior, y a continuación se les presentaran diversos puntos claves que
+                describen al curso.
+
+            </p>
         </div>
     </div>
+
+</div>
+<nav class="navbar navbar-dark bg-dark text-white sticky-top navbar-expand-lg" style="top: 56px;">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mx-auto">
+            <li class="nav-item">
+                <h4><a class="nav-link" href="#metodologia">Metodología<span class="sr-only">(current)</span></a></h4>
+            </li>
+            <li class="nav-item">
+                <h4><a class="nav-link" href="#ucompetencia">Unidad de competencia<span class="sr-only">(current)</span></a></h4>
+            </li>
+            <li class="nav-item">
+                <h4><a class="nav-link" href="#evaluacion">Evaluaci&oacute;n<span class="sr-only">(current)</span></a></h4>
+            </li>
+            <li class="nav-item">
+                <h4><a class="nav-link" href="#contactos">Contactos<span class="sr-only">(current)</span></a></h4>
+            </li>
+            <li class="nav-item">
+                <h4><a class="nav-link" href="#requerimientos">Requerimientos<span class="sr-only">(current)</span></a></h4>
+            </li>
+        </ul>
+    </div>
+</nav>
+<div class="container-fluid">
+    <div class="starter-template bg-white">
+        <a class="anchor" id="metodologia"></a>
+        <div class="d-flex row p-5" style="align-items: center;">
+            <div class="p-3 col-sm">
+                <h1 class="pb-4">Metodolog&iacute;a</h1>
+                <p class="pt-1">
+                    La unidad 2 se abordará a partir de la estrategia de aprendizaje orientada a proyectos y método
+                    deductivo e inductivo, lo cual permitirá la utilización de las siguientes técnicas de aprendizaje:
+                </p>
+                <ul>
+                    <li>Indagación documental</li>
+                    <li>Discusión dirigida</li>
+                    <li>Trabajo colaborativo</li>
+                    <li>Práctica de laboratorio</li>
+                    <li>Exposición de temas complementarios en equipo</li>
+                    <li>Herramientas Considerar Variables (CV) y Considerar Objetivos o Propósitos (COP)</li>
+                </ul>
+                <p class="pt-1">
+                    La unidad contribuye a la creación de un proyecto empresarial aplicando la gestión estratégica.
+                </p>
+            </div>
+            <div class="p-3 col-sm d-none d-lg-block text-center">
+                <img src="{% static 'main/metodologia.png'%}" class="img-fluid my-auto" alt="Responsive image">
+            </div>
+        </div>
+        <a class="anchor" id="ucompetencia"></a>
+        <div class="d-flex row p-5" style="align-items: center; background-color: #e3f2fd;">
+
+            <div class="px-3 pt-2 col-sm d-none d-lg-block mx-auto text-center">
+                <img src="{% static 'main/ucompetencia.png'%}" class="img-fluid text-center my-auto" alt="Responsive image">
+            </div>
+            <div class="pr-3 pt-2 col-sm">
+                <h1 class="pb-4">Unidad de competencia</h1>
+                <p>
+                    En ésta unidad se busca que los estudiantes gestionen organizaciones de innovación
+                    tecnol&oacute;gica con base en competencias gerenciales.
+                </p>
+            </div>
+        </div>
+        <a class="anchor" id="evaluacion"></a>
+        <div class="d-flex row p-5" style="align-items: center;">
+            <div class="p-3 col-sm">
+                <h1 class="pb-4">Evaluaci&oacute;n</h1>
+                <p class="pt-1">
+                    Se realizará una evalaución diagnóstica, y posteriormente se ensamblará un portafolio de evidencias,
+                    el cual consiste de los siguientes puntos con sus respectivos valores:
+                </p>
+                <ul>
+                    <li>Trabajo Colaborativo - 10%</li>
+                    <li>Exposición en equipo - 15%</li>
+                    <li>CV y COP - 10%</li>
+                    <li>Rúbricas de autoevaluación y coevaluación - 5%</li>
+                    <li>Integración del proyecto - 15%</li>
+                    <li>Práctica 1 - 15%</li>
+                    <li>Evidencia de aprendizaje escrita - 30%</li>
+                </ul>
+            </div>
+            <div class="p-3 col-sm d-none d-lg-block text-center">
+                <img src="{% static 'main/evaluacion.png'%}" class="img-fluid my-auto" alt="Responsive image">
+            </div>
+        </div>
+        <a class="anchor" id="contactos"></a>
+        <div class="d-flex row px-5 pt-5 justify-content-center" style="background-color: #e3f2fd;">
+            <h1 class="pb-4">Contactos</h1>
+        </div>
+        <div class="d-flex row px-5 pb-5" style="background-color: #e3f2fd;">
+
+            <div class="col-sm justify-content-center text-center ">
+                <h4>Rocio Palacios Solano</h4>
+                <img src="{% static 'main/rocio.png'%}" width="200" class="img-fluid" alt="">
+                <p class="pt-3">
+                    rpalacioss@ipn.mx <br/>
+                    Ext. 52032
+                </p>
+            </div>
+            <div class="col-sm justify-content-center text-center">
+                <h4>Verónica Agustín Dominguez</h4>
+                <img src="{% static 'main/veronica.png'%}" width="200" class="img-fluid" alt="">
+                <p class="pt-3">
+                    vaguistin@ipn.mx <br/>
+                    Ext. 52032
+                </p>
+                
+            </div>
+            <div class="col-sm justify-content-center text-center">
+                <h4>Axel Ernesto Moreno Cervantes</h4>
+                <img src="{% static 'main/axel.png'%}" width="200"  class="img-fluid " alt="">
+                <p class="pt-3">
+                    axelernesto@gmail.com <br/>
+                    Ext. 52032
+                </p>
+            </div>
+        </div>
+        <a class="anchor" id="requerimientos"></a>
+        <div class="d-flex row px-5 pt-5 bg-primary text-white" style="align-items: center;">
+            <div class="p-3 col-sm">
+                <h1 class="pb-4">Requerimientos</h1>
+                <p class="pt-1">
+                    Para poder acceder a este recurso, se requiere una computadora o dispositivo móvil con conexión a internet, y un navegador web.
+
+                    Algunos navegadores recomendados son las versiones más recientes de los siguientes:
+                </p>
+                <ul>
+                    <li>Google Chrome</li>
+                    <li>Microsoft Edge</li>
+                    <li>Mozilla Firefox</li>
+                    <li>Opera</li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+
+</div>
 {% endblock %}
 {% block extra_css%}
 <style>
-    body {
-		height: 100%;
+    #bienvenida {
+        height: 100%;
         background: url("{% static 'main/background1.png'%}") !important;
         background-size: auto;
+        background-position: bottom;
+    }
+
+    .navbar-dark .navbar-nav .nav-link {
+        color: rgb(230,230,230);
+    }
+
+    a.anchor {
+        display: block;
+        position: relative;
+        top: -112px;
+        visibility: hidden;
     }
 </style>
 {% endblock%}
