feat: add resources website
Signed-off-by: JUAN MÉNDEZ <vpsink@gmail.com>

--- a/gestion/templates/base.html
+++ b/gestion/templates/base.html
@@ -8,6 +8,7 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        <link rel="icon" type="image/x-icon" href="{% static 'main/favicon.ico'%}">
         <title>Gestión Empresarial</title>
     </head>
     <body class="pt-5">
@@ -27,8 +28,15 @@
                     <li class="nav-item text-uppercase {% if url_name == 'main' %}active font-weight-bold{% endif %}">
                         <a class="nav-link" href="{% url 'main' %}">Inicio</a>
                     </li>
-                    <li class="nav-item text-uppercase">
-                        <a class="nav-link" href="#">Recursos</a>
+                    <li class="nav-item text-uppercase dropdown {% if url_name == 'resource' %}active font-weight-bold{% endif %}">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Recursos
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            {% for unit in units %} 
+                                <a class="dropdown-item {% if url_name == 'resource'%}{% if this_unit.name == unit.name %}font-weight-bold{% endif %}{% endif %}" href="{% url 'resource' unit.order %}">{{unit.order}}: {{unit.name}}</a>
+                            {% endfor %}
+                        </div>
                     </li>
                     <li class="nav-item text-uppercase dropdown {% if url_name == 'unit' %}active font-weight-bold{% endif %}">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -36,7 +44,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             {% for unit in units %} 
-                                <a class="dropdown-item {% if this_unit.name == unit.name %} font-weight-bold {% endif %}" href="{% url 'unit' unit.order %}">{{unit.order}}: {{unit.name}}</a>
+                                <a class="dropdown-item {% if url_name == 'unit'%}{% if this_unit.name == unit.name %}font-weight-bold{% endif %}{% endif %}" href="{% url 'unit' unit.order %}">{{unit.order}}: {{unit.name}}</a>
                             {% endfor %}
                         </div>
                     </li>
@@ -53,7 +61,7 @@
 </html>
 <style type="text/css">
     .navbar-light {
-        background: rgba(255, 255, 255, 0.5);
+        background: rgba(255, 255, 255, 0.3);
         backdrop-filter: blur(20px);
         filter: drop-shadow(1px 2px 3px white);
     }
