--- a/gestion/templates/resource.html
+++ b/gestion/templates/resource.html
@@ -2,43 +2,46 @@
 {% block content %}
 	<div style="padding-top: 7px;">
         <div class="text-white text-center mx-auto p-2 bg-gradient border border-dark" style="background-color: {{ this_unit.header_color }};">
-			<h2 style="margin-bottom: 0"> {{this_unit.name}}</h2>
+			<h2 style="margin-bottom: 0"> Unidad {{ this_unit.order }}</h2>
         </div>
 
-        <div class="col col-md-10 p-3 mx-auto">
+        <div class="col col-md-11 p-3 mx-auto">
 
             <div class="bg-light p-4 rounded border border_acccent soft_accent">
-                <h2 id="objetivo">Objetivo</h2>
+                <h2 id="objetivo">Recursos didácticos</h2>
                 <p class="font-weight-bold">
-                	{{ this_unit.goal }}
+                	En esta sección podrá encontrar recursos didácticos para esta unidad.
                 </p>
             </div>
-            <div class="p-4">
-                <h6>Esta unidad consta de {{ subunits | length}} subunidad(es). Haga click en una sección para revelar sus contenidos.</h6>
+            <div class="p-2">
             </div>
             <!-- Contenido -->
-            <div>
-                {% for item in subunits %}
-                    <div class="card mb-3">
+            <div class="card-deck">
+                <div class="row">
+                {% for item in resources %}
+                    <div class="col col-md-6 mb-3">
+                    <div class="card">
                         <div class="card-header softer_accent" id="heading_{{item.order}}">
-                                <button class="btn btn-link font-weight-bold" data-toggle="collapse" data-target="#collapse_{{item.order}}"
-                                    aria-expanded="true" aria-controls="collapse_{{item.order}}">
-                                    {{item.order_as_str}} {{item.name}}
-                                </button>
-                                {% if item.keywords %}
-                                    <h6 class="card-subtitle ml-3 text-muted">Keywords: {{ item.keywords }}</h6>
-                                {% endif %}
+                            <button class="btn btn-link font-weight-bold" data-toggle="collapse" data-target="#collapse_{{item.order}}"
+                                aria-expanded="true" aria-controls="collapse_{{item.order}}">
+                                {{item.order_as_str}} {{item.name}}
+                            </button>
+                            {% if item.subtitle %}
+                                <h6 class="card-subtitle ml-3 text-muted">{{ item.subtitle }}</h6>
+                            {% endif %}
                         </div>
 
                         <div id="collapse_{{item.order}}" class="collapse multi-collapse" aria-labelledby="heading_{{item.order}}">
-                            <div class="card-body p-4">
-                                <div class="d-flex flex-column justify-content-start" id="internaldiv">
+                            <div class="card-body p-1">
+                                <div class="d-flex flex-column" id="internaldiv" style="text-align: left;">
                                     {{item.contents | safe}}
                                 </div>
                             </div>
                         </div>
                     </div>
+                    </div>
                 {% endfor %}
+                </div>
             </div>
         </div>
     </div>
