fix: minor typos
Signed-off-by: bruh <vpsink@gmail.com>

--- a/gestion/templates/main.html
+++ b/gestion/templates/main.html
@@ -8,13 +8,11 @@
             <p class="pt-1">
                 Estimados estudiantes, se les extiende la más cordial bienvenida a este espacio,
                 donde podrán encontrar información relevante a la unidad de aprendizaje conocida como Gestión
-                Empresarial,
-                y así fortalecer sus conocimientos para lograr acreditarla.<br /><br />
+                Empresarial. <br /><br />
 
                 Podrán consultar los contenidos de cada unidad en sus respectivas secciones en la barra de navegación
-                que se encuentra en la parte superior, y a continuación se les presentaran diversos puntos claves que
-                describen al curso.
-
+                que se encuentra en la parte superior. Haga scroll hacia abajo para ver los puntos clave que conforman
+                esta unidad.
             </p>
         </div>
     </div>
@@ -115,7 +113,7 @@
         <div class="d-flex row px-5 pb-5" style="background-color: #e3f2fd;">
 
             <div class="col-sm justify-content-center text-center ">
-                <h4>Rocio Palacios Solano</h4>
+                <h4>Rocío Palacios Solano</h4>
                 <img src="{% static 'main/rocio.png'%}" width="200" class="img-fluid" alt="">
                 <p class="pt-3">
                     rpalacioss@ipn.mx <br/>
@@ -123,7 +121,7 @@
                 </p>
             </div>
             <div class="col-sm justify-content-center text-center">
-                <h4>Verónica Agustín Dominguez</h4>
+                <h4>Verónica Agustín Domínguez</h4>
                 <img src="{% static 'main/veronica.png'%}" width="200" class="img-fluid" alt="">
                 <p class="pt-3">
                     vaguistin@ipn.mx <br/>
