--- a/gestion/templates/unit.html
+++ b/gestion/templates/unit.html
@@ -14,7 +14,7 @@
                 </p>
             </div>
             <div class="p-4">
-                <h6>Esta unidad consta de {{ subunits | length}} subunidad(es). Haga click en una sección para revelar sus contenidos.</h6>
+                <h6>Esta unidad consta de {{ subunits | length}} subtema(s). Haga click en una sección para revelar sus contenidos.</h6>
             </div>
             <!-- Contenido -->
             <div>
