UI: Add some info and extra padding to all sections to remove gradient-like effect

--- a/gestion/templates/base.html
+++ b/gestion/templates/base.html
@@ -15,7 +15,7 @@
     <!-- Navbar -->
     <nav class="navbar fixed-top navbar-expand-md navbar-light">
         <a class="navbar-brand text-uppercase" href="{% url 'main' %}">
-            <img src="{% static 'main/ipn.png'%}" width="25" height="30" class="d-inline-block align-top" alt="">
+            <img src="{% static 'main/ipnlogo2.png'%}" width="25" height="30" alt="">
             Gestión Empresarial
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
